--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -9,18 +9,20 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:fitsSystemWindows="true">
 
         <FrameLayout android:id="@+id/head_container"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:fitsSystemWindows="true"/>
 
 
         <FrameLayout android:id="@+id/body_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
     </android.support.v7.widget.LinearLayoutCompat>
 
