--- a/app/src/main/res/layout/fragment_head.xml
+++ b/app/src/main/res/layout/fragment_head.xml
@@ -3,4 +3,5 @@
     android:id="@+id/playerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fitsSystemWindows="true"/>
